--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -43,6 +43,7 @@ jobs:
       - name: Install dependencies
         run: |
           install.packages(c("remotes"))
+          remotes::install_github("DistanceDevelopment/mrds")
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("covr")
         shell: Rscript {0}
